add dark theme, restore services files and fix init tests

--- a/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/tsconfig.json
+++ b/AngularOfficialTuto/tour-of-heroes/angular-material-tour-of-heroes/tsconfig.json
@@ -4,7 +4,9 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-      "@core/*":["app/core/*"]
+      "@core/*":["app/core/*"],
+      "@modules/*": ["app/modules/*"],
+      "@shared/*": ["app/shared/*"]
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
